<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddVoucherActivity">
    <include layout="@layout/layout_header"
        android:id="@+id/header"/>

    <LinearLayout
        android:id="@+id/ll_body"
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">
        <EditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:hint="@string/title"
            android:layout_marginBottom="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"/>

        <LinearLayout
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/spinnerTypeVoucher"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/bg_input"
                android:hint="@string/classify"
                android:layout_marginBottom="@dimen/_5sdp"
                android:padding="@dimen/_10sdp"/>
                <View
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_1sdp"/>
            <EditText
                android:id="@+id/edt_discount"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input"
                android:hint="@string/discount"
                android:layout_marginBottom="@dimen/_5sdp"
                android:padding="@dimen/_10sdp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edt_quantity"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input"
                android:hint="@string/quantity"
                android:inputType="number"
                android:layout_marginBottom="@dimen/_5sdp"
                android:padding="@dimen/_10sdp"/>
            <View
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_1sdp"/>
            <Spinner
                android:id="@+id/spinnerCondition"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/bg_input"
                android:hint="@string/condition"
                android:layout_marginBottom="@dimen/_5sdp"
                android:padding="@dimen/_10sdp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_start_at"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/_13sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input"
                android:hint="@string/start_at"
                android:padding="@dimen/_10sdp"/>
            <View
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_1sdp"/>
            <TextView
                android:id="@+id/tv_end_at"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/_13sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input"
                android:hint="@string/end_at"
                android:padding="@dimen/_10sdp"/>
        </LinearLayout>

        <EditText
            android:id="@+id/edt_give_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@drawable/bg_input"
            android:layout_marginBottom="@dimen/_10sdp"
            android:hint="Email user ... Phân cách nhau bằng | "
            android:padding="@dimen/_10sdp"/>

        <EditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_100sdp"
            android:background="@drawable/bg_input"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:layout_marginBottom="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"/>

        <LinearLayout
            android:gravity="center_vertical"
            android:background="@drawable/bg_input"
            android:padding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="@dimen/_13sdp"
                android:fontFamily="@font/inter_regular"/>

            <RadioGroup
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rdo_active"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/inter_regular"/>
                <RadioButton
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rdo_disable"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/inter_regular"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_body"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_clear"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_20sdp"
            android:text="Xóa"
            android:background="@drawable/btn_primary"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_20sdp"
            android:text="Thêm"
            android:background="@drawable/btn_primary"/>
    </LinearLayout>

</RelativeLayout>