<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    android:background="@color/background"
   >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60sdp"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:fontFamily="@font/inter_bold"
            android:textSize="@dimen/_25sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hi_welcome_back"
            android:textAlignment="center"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/gray"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/text_size_default" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/header"
        android:id="@+id/layout_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColorHint="#757573"
            app:boxStrokeColor="#941045"
            app:boxCornerRadiusTopEnd="@dimen/_20sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
            app:boxCornerRadiusTopStart="@dimen/_20sdp"
            app:boxCornerRadiusBottomStart="@dimen/_20sdp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTaiKhoan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:isCredential="true"
                android:paddingHorizontal="@dimen/_10sdp"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/_10sdp"
            app:passwordToggleEnabled="true"
            android:textColorHint="#757573"
            app:boxStrokeColor="#941045"
            app:boxCornerRadiusTopEnd="@dimen/_20sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
            app:boxCornerRadiusTopStart="@dimen/_20sdp"
            app:boxCornerRadiusBottomStart="@dimen/_20sdp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_password"
                android:isCredential="true"
                android:paddingHorizontal="@dimen/_10sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:gravity="right"
            tools:ignore="RtlHardcoded" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/btn_primary"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_default"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_other_login"
        android:layout_below="@id/layout_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="horizontal">
        <View
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/dashed_line"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:text="@string/or_other_login"
            android:textColor="@color/gray"
            android:gravity="center"
            android:textSize="@dimen/text_size_small"
            android:layout_marginHorizontal="10dp"/>
        <View
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/dashed_line"/>
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/login_with_google"
        android:layout_below="@id/layout_other_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/_20sdp"
        android:elevation="@dimen/_5sdp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/background"
            android:padding="@dimen/_5sdp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/icons8_google_48" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_with_google"
                android:fontFamily="@font/inter_regular"
                android:textSize="@dimen/text_size_default"
                android:layout_marginHorizontal="@dimen/_10sdp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="@dimen/_20sdp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haven_account"
            android:fontFamily="@font/inter_regular"
            android:textSize="@dimen/text_size_default"
            />
        <TextView
            android:id="@+id/tvRegister"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/sign_up"/>
    </LinearLayout>
</RelativeLayout>