<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
   >

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:gravity="center"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_create_account"
                android:fontFamily="@font/inter_bold"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_sign_up"
                android:textAlignment="center"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/gray"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/text_size_default" />
        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/header"
            android:id="@+id/layout_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingHorizontal="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="13dp"
                android:textColorHint="#757573"
                app:boxStrokeColor="#941045"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="Full Name"
                    android:paddingHorizontal="10dp"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="13dp"
                android:textColorHint="#757573"
                app:boxStrokeColor="#941045"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="Email"
                    android:paddingHorizontal="10dp"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="13dp"
                app:passwordToggleEnabled="true"
                android:textColorHint="#757573"
                app:boxStrokeColor="#941045"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPass"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="Password"
                    android:paddingHorizontal="10dp"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/ckbAgree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Agree with Terms &amp; Condition"
                    />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:layout_marginTop="25dp"
                android:background="@drawable/btn_primary"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_other"
            android:layout_below="@id/layout_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <View
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:background="@drawable/dashed_line"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/or_other_login"
                android:textColor="@color/gray"
                android:gravity="center"
                android:textSize="17sp"
                android:layout_marginHorizontal="10dp"/>
            <View
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:background="@drawable/dashed_line"/>
        </LinearLayout>


    <com.google.android.material.card.MaterialCardView
        android:layout_below="@id/layout_other"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/_20sdp"
        android:elevation="@dimen/_5sdp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/background"
            android:padding="@dimen/_5sdp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/icons8_google_48" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_with_google"
                android:fontFamily="@font/inter_regular"
                android:textSize="@dimen/text_size_default"
                android:layout_marginHorizontal="@dimen/_10sdp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:id="@+id/layout_bottom"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="@dimen/_10sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/has_account"
                android:textSize="@dimen/text_size_default"
                />
            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_default"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/colorPrimary"
                android:text="@string/sign_in"/>
        </LinearLayout>

</RelativeLayout>